force-app/main/default/objects/IssueRisk__c/IssueRisk__c.object-meta.xml
<CustomObject>
    <label>Issue &amp; Risk</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issues &amp; Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>