force-app/main/default/objects/IssueRisk__c/fields/Criticality__c.field-meta.xml
<CustomField>
    <fullName>Criticality__c</fullName>
    <label>Criticality</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
                <color>#000000</color>
                <label>⚫️ Critical</label>
            </value>
            <value>
                <fullName>High</fullName>
                <color>#CC0000</color>
                <default>true</default>
                <label>🔴 High</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <color>#FFCC33</color>
                <label>🟠 Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <color>#FFFF66</color>
                <label>🟡 Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>