force-app/main/default/objects/IssueRisk__c/fields/DetectionDate__c.field-meta.xml
<CustomField>
    <fullName>DetectionDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Detection Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>