force-app/main/default/objects/IssueRisk__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <formula>CASE( Type__c, 
&quot;Risk&quot;, &quot;R-&quot; + Number__c , 
&quot;Issue&quot;, &quot;IS-&quot; + Number__c, 
&quot;IR-&quot; + Number__c) + &quot; - &quot; + TEXT(Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id</label>
    <type>Text</type>
</CustomField>