force-app/main/default/objects/IssueRisk__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>SpringProject_Project__c</referenceTo>
    <relationshipLabel>Issues &amp; Risks (Project)</relationshipLabel>
    <relationshipName>Issues_Risks1</relationshipName>
    <type>Lookup</type>
</CustomField>