force-app/main/default/objects/IssueRisk__c/fields/SpringProject__c.field-meta.xml
<CustomField>
    <fullName>SpringProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SpringProject-Project</label>
    <referenceTo>SpringProject_Project__c</referenceTo>
    <relationshipLabel>Issues &amp; Risks</relationshipLabel>
    <relationshipName>Issues_Risks</relationshipName>
    <type>Lookup</type>
</CustomField>