force-app/main/default/objects/IssueRisk__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <color>#CC0000</color>
                <default>true</default>
                <label>🔄 Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <color>#006600</color>
                <label>✅ Closed</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <color>#006600</color>
                <label>❎ Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>