force-app/main/default/objects/IssueRisk__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Criticality__c</columns>
    <columns>Status__c</columns>
    <columns>DetectionDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>