force-app/main/default/objects/IssueRisk__c/listViews/Open_Issues_Risks_Ticketing.listView-meta.xml
<ListView>
    <fullName>Open_Issues_Risks_Ticketing</fullName>
    <columns>Id__c</columns>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>Criticality__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Open Issues &amp; Risks - Ticketing</label>
</ListView>