force-app/main/default/objects/IssueRisk__c/listViews/OpenRisksIssues.listView-meta.xml
<ListView>
    <fullName>OpenRisksIssues</fullName>
    <columns>Id__c</columns>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Criticality__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Issues &amp; Risks</label>
</ListView>